Update wasachat
